fix: firefox scrollbar style

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -6,6 +6,12 @@ html {
   --header-height: auto;
   /* Accent color for form controls */
   accent-color: var(--theme-color);
+
+  /* make app like native app in mobile */
+  -webkit-tap-highlight-color: transparent;
+  /*  for firefox */
+  scrollbar-color: var(--theme-color) transparent;
+  scrollbar-width: thin;
 }
 
 html.dark {
